<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.venafi</groupId>
    <artifactId>vcert-java</artifactId>
    <version>${env.ARTIFACT_RELEASE_VERSION}</version>
    <packaging>jar</packaging>
    
    <name>${project.groupId}:${project.artifactId}</name>
    <description>VCert is a Java library, SDK, designed to simplify key generation and enrollment of machine identities (also known as SSL/TLS certificates and keys) that comply with enterprise security policy by using the Venafi Platform or Venafi Cloud.</description>
    <url>https://github.com/Venafi/vcert-java</url>
    
    <licenses>
    	<license>
    		<name>The Apache License, Version 2.0</name>
    		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    	</license>
    </licenses>
    
    <developers>
    	<developer>
    		<name>Ryan Treat</name>
    		<email>Ryan.Treat@venafi.com</email>
    		<organization>Venafi, Inc.</organization>
    		<organizationUrl>https://www.venafi.com/</organizationUrl>
    	</developer>
    	<developer>
    		<name>Marcos Albornoz</name>
    		<email>marcos.albornoz@venafi.com</email>
    		<organization>Venafi, Inc.</organization>
    		<organizationUrl>https://www.venafi.com/</organizationUrl>
    	</developer>
    	<developer>
    		<name>Russel Vela</name>
    		<email>russel.vela@venafi.com</email>
    		<organization>Venafi, Inc.</organization>
    		<organizationUrl>https://www.venafi.com/</organizationUrl>
    	</developer>
    	<developer>
    		<name>Angel Moo</name>
    		<email>angel.moo@venafi.com</email>
    		<organization>Venafi, Inc.</organization>
    		<organizationUrl>https://www.venafi.com/</organizationUrl>
    	</developer>
    </developers>
    
    <scm>
    	<connection>scm:git:git://github.com/Venafi/vcert-java.git</connection>
    	<developerConnection>scm:git:ssh://github.com:Venafi/vcert-java.git</developerConnection>
    	<url>https://github.com/Venafi/vcert-java/tree/master</url>
    </scm>
    
    <distributionManagement>
    	<snapshotRepository>
    		<id>ossrh</id>
    		<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
  		</snapshotRepository>
	</distributionManagement>

    <properties>
        <lombok.version>1.18.6</lombok.version>
        <bouncycastle.version>1.61</bouncycastle.version>
        <feign.version>10.4.0</feign.version>
        <guava.version>30.1.1-jre</guava.version>
        <log4j.version>2.13.3</log4j.version>
        <junit.version>5.3.1</junit.version>
        <mockito.version>2.25.1</mockito.version>
        <wiremock.version>2.22.0</wiremock.version>
        <assertj.version>3.12.2</assertj.version>
        <ini4j.version>0.5.4</ini4j.version>
        <commonslang3.version>3.11</commonslang3.version>
        <jarName>${project.artifactId}-${project.version}</jarName>
        <httpclient.version>4.5.13</httpclient.version>
        <httpcore.version>4.4.14</httpcore.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-gson</artifactId>
            <version>${feign.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.openfeign</groupId>
            <artifactId>feign-slf4j</artifactId>
            <version>${feign.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8</artifactId>
            <version>${wiremock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ini4j</groupId>
            <artifactId>ini4j</artifactId>
            <version>${ini4j.version}</version>
        </dependency>
	    <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>${commonslang3.version}</version>
	    </dependency>
	    <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>${httpcore.version}</version>
        </dependency>
		<dependency>
			<groupId>com.sshtools</groupId>
			<artifactId>maverick-base</artifactId>
			<version>3.0.3-FINAL</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/*AT.java</include>
                        <include>**/*Test</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${jarName}-with-dependencies</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                    <attach>false</attach>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-gpg-plugin</artifactId>
		        <version>3.0.1</version>
		        <executions>
		        	<execution>
		        		<id>sign-artifacts</id>
		        		<phase>verify</phase>
		            	<goals>
		        			<goal>sign</goal>
		        		</goals>
		        	</execution>
		        </executions>
			</plugin>
			<plugin>
      			<groupId>org.sonatype.plugins</groupId>
      			<artifactId>nexus-staging-maven-plugin</artifactId>
      			<version>1.6.7</version>
      			<extensions>true</extensions>
      			<configuration>
        			<serverId>ossrh</serverId>
        			<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
        			<!-- skipStagingRepositoryClose>true</skipStagingRepositoryClose -->
        			<autoReleaseAfterClose>true</autoReleaseAfterClose>
      			</configuration>
    		</plugin>
        </plugins>
    </build>
</project>
